[Sarthak]: modified the code of ReadJSONSpecificFields class